<resources>
    <string name="app_name">RPSLS</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_game_result">GameResultActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="btnSpock">Spock</string>
    <string name="btnPaper">Paper</string>
    <string name="btnRock">Rock</string>
    <string name="btnLizard">Lizard</string>
    <string name="btnScissors">Scissors</string>
</resources>
