<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRock"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/rock"
            android:contentDescription="@string/btnRock"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRock"
        android:id="@+id/LinMiddle"
        android:layout_marginTop="-10dp">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSpock"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/spock"
            android:contentDescription="@string/btnSpock"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_margin="5dp" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPaper"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/paper"
                android:contentDescription="@string/btnPaper"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/LinMiddle"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLizard"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/lizard"
            android:contentDescription="@string/btnLizard"
            android:layout_margin="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnScissors"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/scissors"
            android:contentDescription="@string/btnScissors"
            android:layout_margin="5dp" />
    </LinearLayout>

</RelativeLayout>
